Null url dan teks

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
          el: '#app',
          data: {
             api: 'https://cari-teks-video-api.vercel.app/api/search',
-            teks: 'then',
-            url: 'https://www.youtube.com/watch?v=klnvttPfOUM',
+            teks: '',
+            url: '',
             loading: false,
             total: 0,
             first: false,
